src/runtime/FortranAPI.f90

MODULE BRISBANE
    USE, INTRINSIC :: ISO_C_BINDING
    IMPLICIT NONE

    INTEGER, PARAMETER :: BRISBANE_OK   = 0
    INTEGER, PARAMETER :: BRISBANE_ERR  = -1

    INTEGER, PARAMETER :: BRISBANE_CPU  = LSHIFT(1, 1)
    INTEGER, PARAMETER :: BRISBANE_GPU  = LSHIFT(1, 2)

    TYPE BRISBANE_MEM
        INTEGER :: CLASS_OBJ;
    END TYPE BRISBANE_MEM
    
    TYPE BRISBANE_TASK
        INTEGER :: CLASS_OBJ;
    END TYPE BRISBANE_TASK

    INTERFACE

    INTEGER(C_INT) FUNCTION BRISBANE_INIT_CBIND(ARGC, ARGV) &
        BIND(C, NAME='brisbane_init')
        USE, INTRINSIC :: ISO_C_BINDING
        INTEGER(C_INT), VALUE, INTENT(IN) :: ARGC
        TYPE(C_PTR), VALUE, INTENT(IN) :: ARGV
    END FUNCTION BRISBANE_INIT_CBIND

    INTEGER(C_INT) FUNCTION BRISBANE_FINALIZE_CBIND() &
        BIND(C, NAME='brisbane_finalize')
        USE, INTRINSIC :: ISO_C_BINDING
    END FUNCTION BRISBANE_FINALIZE_CBIND

    INTEGER(C_INT) FUNCTION BRISBANE_MEM_CREATE_CBIND(SIZE, MEM) &
        BIND(C, NAME='brisbane_mem_create')
        USE, INTRINSIC :: ISO_C_BINDING
        INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: SIZE
        TYPE(C_PTR), INTENT(OUT) :: MEM
    END FUNCTION BRISBANE_MEM_CREATE_CBIND

    INTEGER(C_INT) FUNCTION BRISBANE_TASK_CREATE_CBIND(TASK) &
        BIND(C, NAME='brisbane_task_create')
        USE, INTRINSIC :: ISO_C_BINDING
        TYPE(C_PTR), INTENT(OUT) :: TASK
    END FUNCTION BRISBANE_TASK_CREATE_CBIND

    INTEGER(C_INT) FUNCTION BRISBANE_TASK_SUBMIT_CBIND(TASK, DEV, OPT, WAIT) &
        BIND(C, NAME='brisbane_task_submit')
        USE, INTRINSIC :: ISO_C_BINDING
        TYPE(C_PTR), VALUE, INTENT(IN) :: TASK
        INTEGER(C_INT), VALUE, INTENT(IN) :: DEV
        TYPE(C_PTR), VALUE, INTENT(IN) :: OPT
        LOGICAL(C_BOOL), VALUE, INTENT(IN) :: WAIT
    END FUNCTION BRISBANE_TASK_SUBMIT_CBIND

    END INTERFACE

    CONTAINS

    SUBROUTINE BRISBANE_INIT(IERROR)
        INTEGER, INTENT(OUT) :: IERROR
        IERROR = BRISBANE_INIT_CBIND(0, C_NULL_PTR)
    END SUBROUTINE BRISBANE_INIT

    SUBROUTINE BRISBANE_FINALIZE(IERROR)
        INTEGER, INTENT(OUT) :: IERROR
        IERROR = BRISBANE_FINALIZE_CBIND()
    END SUBROUTINE BRISBANE_FINALIZE

    SUBROUTINE BRISBANE_MEM_CREATE(SIZE, MEM, IERROR)
        INTEGER(KIND=8), INTENT(IN) :: SIZE
        TYPE(BRISBANE_MEM), POINTER, INTENT(OUT) :: MEM
        INTEGER, INTENT(OUT) :: IERROR
        TYPE(C_PTR) :: MEM_CPTR
        MEM_CPTR = C_LOC(MEM)
        IERROR = BRISBANE_MEM_CREATE_CBIND(SIZE, MEM_CPTR)
    END SUBROUTINE BRISBANE_MEM_CREATE

    SUBROUTINE BRISBANE_TASK_CREATE(TASK, IERROR)
        TYPE(BRISBANE_TASK), POINTER, INTENT(OUT) :: TASK 
        INTEGER, INTENT(OUT) :: IERROR
        TYPE(C_PTR) :: TASK_CPTR
        TASK_CPTR = C_LOC(TASK)
        IERROR = BRISBANE_TASK_CREATE_CBIND(TASK_CPTR)
    END SUBROUTINE BRISBANE_TASK_CREATE

    SUBROUTINE BRISBANE_TASK_SUBMIT(TASK, DEV, WAIT, IERROR)
        TYPE(BRISBANE_TASK), POINTER, INTENT(IN) :: TASK 
        INTEGER, INTENT(IN) :: DEV
        LOGICAL, INTENT(IN) :: WAIT
        INTEGER, INTENT(OUT) :: IERROR
        TYPE(C_PTR) :: TASK_CPTR
        LOGICAL(C_BOOL) :: WAIT_C
        TASK_CPTR = C_LOC(TASK)
        WAIT_C = WAIT
        IERROR = BRISBANE_TASK_SUBMIT_CBIND(TASK_CPTR, DEV, C_NULL_PTR, WAIT_C)
    END SUBROUTINE BRISBANE_TASK_SUBMIT

END MODULE BRISBANE

